[project]
name = "scottbrian_utils"
version = "7.0.0"
description = "Miscellaneous utilities"
readme = "README.rst"
requires-python = "~=3.14"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["utilities"]
authors = [{name = "Scott Tuttle", email = "sbtuttle@outlook.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Recovery Tools",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows :: Windows 11"]


dependencies = [
    "pandas ~=3.0",
    "pytest ~=9.1",
    "sybil ~=10.1",
    "wrapt ~=2.2",
]

[tool.setuptools]
packages = ["scottbrian_utils"]
package-dir = {"" = "src"}

[project.urls]
Documentation = "https://scottbrian-utils.readthedocs.io/en/latest/"
Source = "https://github.com/ScottBrian/scottbrian_utils.git"

[build-system]
requires = [
    "setuptools ~=80.9",
]
build-backend = 'setuptools.build_meta'
